# secreta

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
crates/secreta-azure-vault/: Cargo.toml
crates/secreta-azure-vault/src/: lib.rs
crates/secreta-core/: Cargo.toml
crates/secreta-core/src/: provider.rs
crates/secreta-kubernetes/: Cargo.toml
crates/secreta-kubernetes/src/: lib.rs
src/: main.rs
src/cli/: mod.rs  read.rs  run.rs
src/cnf/: mod.rs  schema.rs
src/env/: mod.rs
src/pvd/: mod.rs
src/sec/: mod.rs
