[package]
name = "secreta"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/secreta-azure-vault",
    "crates/secreta-core",
    "crates/secreta-kubernetes",
]

[dependencies]
secreta-core = { workspace = true }
secreta-kubernetes = { path = "crates/secreta-kubernetes", optional = true }
secreta-azure-vault = { path = "crates/secreta-azure-vault", optional = true }

leon = "3.0.2"

anyhow = { workspace = true }
serde_yml = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
either = { version = "1.15.0", features = ["serde"] }

[workspace.dependencies]
anyhow = "1.0.99"
serde_yml = "0.0.12"

secreta-core = { path = "crates/secreta-core" }

url = { version = "2.5.7", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[features]
default = ["kubernetes"]
kubernetes = ["secreta-kubernetes"]
azure-vault = ["secreta-azure-vault"]
