[package]
name = "secreta-kubernetes"
version = "0.1.0"
edition = "2024"

[dependencies]
url = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
secreta-core = { workspace = true }

kube = { version = "1.1.0", features = ["gzip"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
